# fuse-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.atomadic/governance/: decisions.md  wisdom.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  MCP_QUICKSTART.md  OPERATIONS.md  README.md  S2S_AND_ENGINE_BOUNDARY.md  SECURITY_AND_PRIVACY.md  USE_CASES.md  WHITEPAPER.md
examples/: 01_classify.py  02_compile_repo.py  03_search_intent.py  04_verify_block.py  05_compose_emit.py  06_usage_stats.py
src/atomadic_fuse/: __init__.py  cli.py  client.py  exceptions.py  mcp_server.py
src/atomadic_fuse/logic-base-seed/: README.md  manifest.json
src/atomadic_fuse/logic-base-seed/glossary/: README.md  actions.json  entities.json  scopes.json
src/atomadic_fuse/logic-base-seed/tiers/tier_0/shards/: define.jsonl  parse.jsonl  validate.jsonl
src/atomadic_fuse/logic-base-seed/tiers/tier_1/shards/: compose.jsonl  define.jsonl  normalize.jsonl  parse.jsonl  render.jsonl  validate.jsonl
src/atomadic_fuse/logic-base-seed/tiers/tier_2/shards/: compose.jsonl
tests/: test_client.py  test_imports.py
